add picture wall

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Thu Sep 08 11:17:48 CST 2016
+#Sun Sep 18 21:15:49 CST 2016
+MyTheMoviedbApiKey="f63b8bb31e8f343346fe6159f7cf46f6"
 systemProp.http.proxyHost=127.0.0.1
 org.gradle.jvmargs=-Xmx1536m
 systemProp.http.proxyPort=8787
