--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -26,6 +27,10 @@
             android:label="@string/movie_detail">
 
         </activity>
+        <provider
+            android:authorities="com.cqing.project00"
+            android:name=".data.PopMoviesProvider"
+            />
     </application>
 
 </manifest>
