--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cqing.project00">
 
-
     <uses-permission
         android:name="android.permission.READ_SYNC_SETTINGS"/>
     <uses-permission
@@ -10,11 +9,6 @@
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <!-- SD卡写权限 -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <!-- 使用相机 -->
-    <uses-permission android:name="android.permission.CAMERA" />
-
 
     <application
         android:allowBackup="true"
@@ -41,7 +35,7 @@
 
         <provider
             android:name=".data.PopMoviesProvider"
-            android:authorities="com.cqing.project00" />
+            android:authorities="@string/content_authority" />
 
         <!-- SyncAdapter's dummy authentication service -->
         <service android:name=".sync.PopMovieAuthenticatorService">
